# .dotfiles

./: #hyprland.conf#  .gitignore  hyprland.conf  test  test1  test2  testwithexpansion
.lem/: config.lisp  init.lisp
MangoHud/: MangoHud.conf
alacritty/: alacritty.toml
ansible/: ansible.cfg
awesome/: rc.lua
bash/: #.bashrc#  .bashrc  .blerc  .inputrc  format_to_threshold.sh  functions.sh  link.sh  prompt.sh  scripts.sh  swww.sh
direnv/: direnv.toml
dwl/: startup
easyeffects/: Samsung EO-IA500.json  my-preset2.json
foot/: foot.ini
fzf/: .fzf.zsh
ghostty/: config
git/: .gitignore
grub/: grub  readme
home-manager/: home.nix  readme
hyprland/: hyprland.conf
i3/: config  launch.sh  launch.sh.bak
jetbrains/: .ideavimrc  pycharm-custom.desktop
k9s/: config.yaml
karabiner/: configs.json  karabiner.json
keyboard/: #readme#  00-keyboard.conf  layout.sh  readme  us  vconsole.conf
kitty/: kitty.conf
lazydocker/: #config.yml#  config.yml
lazygit/: config.yml
mango/: autostart.sh  config.conf
markdownlint/: .markdownlint.json
mc/: hotlist  ini  menu  panels.ini
niri/: config.kdl  keyboard-switch.sh  startup.sh
nix/: configuration.nix  flake.nix  home-manager.txt  home.nix  readme.txt
nixos/: custom-emacs.nix  flake.nix  home.nix
nu/: config.nu  env.nu  functions.nu
nvim/: #init.lua#  init.lua  lazy-lock.json  repro.lua  rocks.toml
nvim-server/: lazy-lock.json  repro.lua
scripts/awk/: Cargo.toml  dependancies_update.awk  test
scripts/haskell/: scripts.cabal
scripts/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
scripts/haskell/exe/: bak.hs  dependency-update.hs
(+981 files in other folders)
