[[bin]]
name = "my_binary"
path = "src/main.rs"

[package]
name = "shelf_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.20"
pretty_env_logger = "0.5"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros"] }

[features]
default = ["feature1"]
feature1 = []
feature2 = ["dep1", "dep2"]
